minor fix to self-align search box to the left

--- a/frontend/pages/policies/ManagePoliciesPage/components/PoliciesTable/_styles.scss
+++ b/frontend/pages/policies/ManagePoliciesPage/components/PoliciesTable/_styles.scss
@@ -70,6 +70,10 @@
           }
         }
       }
+
+      &__search {
+        align-self: start;
+      }
     }
   }
 }
